--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,6 @@
-<app-navbar></app-navbar>
+<div class="mb-9">
+    <app-navbar></app-navbar>
+</div>
+
 <router-outlet></router-outlet>
 <app-footer></app-footer>
