--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,10 +1,50 @@
 <app-hero></app-hero>
-<app-statistics></app-statistics>
-<app-courses-preview></app-courses-preview>
-<app-features></app-features>
-<app-journey></app-journey>
-<app-mentors></app-mentors>
-<app-partners></app-partners>
-<app-feedback></app-feedback>
-<app-faq></app-faq>
-<app-testimonials></app-testimonials>
+@defer(on idle){
+    <app-statistics></app-statistics>
+}
+@placeholder{
+    <div>Loading...</div>
+}
+<!-- make defer to each component -->
+ @defer(on idle){
+    <app-courses-preview></app-courses-preview>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-features></app-features>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-journey></app-journey>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-mentors></app-mentors>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-partners></app-partners>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-feedback></app-feedback>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
+ @defer(on idle){
+    <app-faq></app-faq>
+ }
+ @placeholder{
+    <div>Loading...</div>
+}
