--- a/src/app/components/home/journey/journey.html
+++ b/src/app/components/home/journey/journey.html
@@ -1,11 +1,5 @@
 <section class="bg-gray-50 py-16">
   <div class="max-w-7xl mx-auto px-4 lg:px-8 grid lg:grid-cols-2 gap-12 items-center">
-    
-    <!-- Image -->
-    <div>
-      <img src="assets/images/journey.jpg" alt="Our journey" class="rounded-lg shadow-lg w-full object-cover">
-    </div>
-
     <!-- Text & Stats -->
     <div>
       <h2 class="text-3xl font-bold text-gray-800 mb-6">
@@ -33,5 +27,12 @@
         </div>
       </div>
     </div>
+    
+    
+    <!-- Image -->
+    <div>
+      <img src="assets/journey.jpg" alt="Our journey" class="rounded-lg shadow-lg w-full object-cover">
+    </div>
+
   </div>
 </section>
