--- a/src/app/components/home/partners/partners.html
+++ b/src/app/components/home/partners/partners.html
@@ -3,11 +3,12 @@
     <h2 class="text-2xl font-bold text-gray-800 text-center mb-8">Our Partners</h2>
 
     <div class="grid grid-cols-2 md:grid-cols-5 gap-8 items-center justify-items-center">
-      <img src="assets/images/partners/hubspot.png" alt="HubSpot" class="h-12 object-contain">
-      <img src="assets/images/partners/zoom.png" alt="Zoom" class="h-12 object-contain">
-      <img src="assets/images/partners/zendesk.png" alt="Zendesk" class="h-12 object-contain">
-      <img src="assets/images/partners/intercom.png" alt="Intercom" class="h-12 object-contain">
-      <img src="assets/images/partners/asana.png" alt="Asana" class="h-12 object-contain">
+      <img src="assets/hubspot.png" alt="HubSpot" class="h-12 object-contain">
+      <img src="assets/zoom.png" alt="Zoom" class="h-12 object-contain">
+      <img src="assets/zendesk.png" alt="Zendesk" class="h-12 object-contain">
+      <img src="assets/intercom.png" alt="Intercom" class="h-12 object-contain">
+      <img src="assets/asana.png" alt="Asana" class="h-12 object-contain">
     </div>
   </div>
 </section>
+
