--- a/src/app/components/shared/filter-sidebar/filter-sidebar.html
+++ b/src/app/components/shared/filter-sidebar/filter-sidebar.html
@@ -1,13 +1,13 @@
 <aside class="bg-white p-4 rounded-lg shadow space-y-6 w-full">
   <!-- Search -->
-  <div>
+  <!-- <div>
     <label class="block text-sm font-medium text-gray-700 mb-1">Search</label>
     <input type="text"
            [(ngModel)]="filters.search"
            (input)="onFiltersChange()"
            placeholder="Search courses..."
            class="w-full border rounded px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-500" />
-  </div>
+  </div> -->
 
   <!-- Category -->
   <div>
