--- a/src/app/components/shared/navbar/navbar.html
+++ b/src/app/components/shared/navbar/navbar.html
@@ -70,7 +70,7 @@
       @for (course of filteredCourses; track course.id) {
         <li (click)="goToCourse(course.id)"
             class="px-3 py-2 hover:bg-gray-100 cursor-pointer">
-          {{ course.title }}
+          {{ course.courseTitle }}
         </li>
       }
     </ul>
